--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,13 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: 'Labrada', serif;
 }
 
 html,
 body {
   max-width: 100vw;
+  font-family: 'Labrada', serif;
 }
 
 body {
